--- a/package.json
+++ b/package.json
@@ -1,17 +1,282 @@
 {
   "name": "mundo_popup",
   "version": "1.0.0",
-  "description": "",
+  "description": "Proyecto pagina web sobre los el mundo de los libros deplagables",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-css": "node-sass --include-path scss scss/archivo.scss css/estilos.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
-  "author": "",
+  "author": "Hernan Santoro",
   "license": "ISC",
   "devDependencies": {
     "node-sass": "^6.0.0",
     "nodemon": "^2.0.7"
-  }
+  },
+  "dependencies": {
+    "amdefine": "^1.0.1",
+    "ansi-styles": "^2.2.1",
+    "abbrev": "^1.1.1",
+    "ansi-regex": "^2.1.1",
+    "ansi-align": "^3.0.0",
+    "aproba": "^1.2.0",
+    "ajv": "^6.12.6",
+    "assert-plus": "^1.0.0",
+    "anymatch": "^3.1.2",
+    "array-find-index": "^1.0.2",
+    "are-we-there-yet": "^1.1.5",
+    "aws-sign2": "^0.7.0",
+    "async-foreach": "^0.1.3",
+    "asn1": "^0.2.4",
+    "asynckit": "^0.4.0",
+    "bcrypt-pbkdf": "^1.0.2",
+    "aws4": "^1.11.0",
+    "balanced-match": "^1.0.2",
+    "braces": "^3.0.2",
+    "brace-expansion": "^1.1.11",
+    "binary-extensions": "^2.2.0",
+    "boxen": "^4.2.0",
+    "camelcase": "^2.1.1",
+    "cacheable-request": "^6.1.0",
+    "camelcase-keys": "^2.1.0",
+    "chalk": "^1.1.3",
+    "caseless": "^0.12.0",
+    "cli-boxes": "^2.2.1",
+    "chokidar": "^3.5.1",
+    "chownr": "^2.0.0",
+    "ci-info": "^2.0.0",
+    "cliui": "^5.0.0",
+    "code-point-at": "^1.1.0",
+    "clone-response": "^1.0.2",
+    "color-name": "^1.1.4",
+    "color-convert": "^2.0.1",
+    "concat-map": "^0.0.1",
+    "configstore": "^5.0.1",
+    "core-util-is": "^1.0.2",
+    "console-control-strings": "^1.1.0",
+    "combined-stream": "^1.0.8",
+    "cross-spawn": "^7.0.3",
+    "dashdash": "^1.14.1",
+    "crypto-random-string": "^2.0.0",
+    "currently-unhandled": "^0.4.1",
+    "decamelize": "^1.2.0",
+    "debug": "^3.2.7",
+    "decompress-response": "^3.3.0",
+    "delayed-stream": "^1.0.0",
+    "delegates": "^1.0.0",
+    "duplexer3": "^0.1.4",
+    "deep-extend": "^0.6.0",
+    "ecc-jsbn": "^0.1.2",
+    "defer-to-connect": "^1.1.3",
+    "dot-prop": "^5.3.0",
+    "end-of-stream": "^1.4.4",
+    "error-ex": "^1.3.2",
+    "escape-goat": "^2.1.1",
+    "emoji-regex": "^7.0.3",
+    "extsprintf": "^1.3.0",
+    "escape-string-regexp": "^1.0.5",
+    "extend": "^3.0.2",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fill-range": "^7.0.1",
+    "forever-agent": "^0.6.1",
+    "form-data": "^2.3.3",
+    "fast-deep-equal": "^3.1.3",
+    "env-paths": "^2.2.1",
+    "fs.realpath": "^1.0.0",
+    "find-up": "^1.1.2",
+    "fs-minipass": "^2.1.0",
+    "fsevents": "^2.3.2",
+    "function-bind": "^1.1.1",
+    "gauge": "^2.7.4",
+    "get-stdin": "^4.0.1",
+    "gaze": "^1.1.3",
+    "get-stream": "^4.1.0",
+    "getpass": "^0.1.7",
+    "get-caller-file": "^2.0.5",
+    "glob": "^7.1.7",
+    "glob-parent": "^5.1.2",
+    "globule": "^1.3.2",
+    "got": "^9.6.0",
+    "global-dirs": "^2.1.0",
+    "har-schema": "^2.0.0",
+    "has": "^1.0.3",
+    "graceful-fs": "^4.2.6",
+    "har-validator": "^5.1.5",
+    "has-ansi": "^2.0.0",
+    "has-unicode": "^2.0.1",
+    "has-yarn": "^2.1.0",
+    "http-cache-semantics": "^4.1.0",
+    "http-signature": "^1.2.0",
+    "has-flag": "^4.0.0",
+    "hosted-git-info": "^2.8.9",
+    "ignore-by-default": "^1.0.1",
+    "import-lazy": "^2.1.0",
+    "inherits": "^2.0.4",
+    "imurmurhash": "^0.1.4",
+    "indent-string": "^2.1.0",
+    "inflight": "^1.0.6",
+    "is-arrayish": "^0.2.1",
+    "ini": "^1.3.7",
+    "is-ci": "^2.0.0",
+    "is-binary-path": "^2.1.0",
+    "is-finite": "^1.1.0",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^1.0.0",
+    "is-core-module": "^2.4.0",
+    "is-glob": "^4.0.1",
+    "is-installed-globally": "^0.3.2",
+    "is-npm": "^4.0.0",
+    "is-obj": "^2.0.0",
+    "is-path-inside": "^3.0.3",
+    "is-utf8": "^0.2.1",
+    "is-typedarray": "^1.0.0",
+    "is-number": "^7.0.0",
+    "is-yarn-global": "^0.3.0",
+    "isstream": "^0.1.2",
+    "jsbn": "^0.1.1",
+    "isarray": "^1.0.0",
+    "isexe": "^2.0.0",
+    "json-buffer": "^3.0.0",
+    "js-base64": "^2.6.4",
+    "json-schema": "^0.2.3",
+    "jsprim": "^1.4.1",
+    "json-schema-traverse": "^0.4.1",
+    "json-stringify-safe": "^5.0.1",
+    "keyv": "^3.1.0",
+    "locate-path": "^3.0.0",
+    "load-json-file": "^1.1.0",
+    "lodash": "^4.17.21",
+    "loud-rejection": "^1.6.0",
+    "latest-version": "^5.1.0",
+    "make-dir": "^3.1.0",
+    "map-obj": "^1.0.1",
+    "lru-cache": "^6.0.0",
+    "meow": "^3.7.0",
+    "lowercase-keys": "^1.0.1",
+    "mime-db": "^1.48.0",
+    "mimic-response": "^1.0.1",
+    "minimatch": "^3.0.4",
+    "mime-types": "^2.1.31",
+    "minimist": "^1.2.5",
+    "minipass": "^3.1.3",
+    "minizlib": "^2.1.2",
+    "nan": "^2.14.2",
+    "mkdirp": "^0.5.5",
+    "node-gyp": "^7.1.2",
+    "nopt": "^5.0.0",
+    "ms": "^2.1.3",
+    "npmlog": "^4.1.2",
+    "normalize-url": "^4.5.1",
+    "number-is-nan": "^1.0.1",
+    "normalize-path": "^3.0.0",
+    "oauth-sign": "^0.9.0",
+    "once": "^1.4.0",
+    "normalize-package-data": "^2.5.0",
+    "object-assign": "^4.1.1",
+    "p-locate": "^3.0.0",
+    "p-limit": "^2.3.0",
+    "p-try": "^2.2.0",
+    "p-cancelable": "^1.1.0",
+    "parse-json": "^2.2.0",
+    "path-exists": "^2.1.0",
+    "package-json": "^6.5.0",
+    "path-type": "^1.1.0",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "path-is-absolute": "^1.0.1",
+    "pify": "^2.3.0",
+    "picomatch": "^2.3.0",
+    "pinkie-promise": "^2.0.1",
+    "pinkie": "^2.0.4",
+    "performance-now": "^2.1.0",
+    "psl": "^1.8.0",
+    "pstree.remy": "^1.1.8",
+    "process-nextick-args": "^2.0.1",
+    "prepend-http": "^2.0.0",
+    "rc": "^1.2.8",
+    "pump": "^3.0.0",
+    "punycode": "^2.1.1",
+    "pupa": "^2.1.1",
+    "qs": "^6.5.2",
+    "readable-stream": "^2.3.7",
+    "read-pkg": "^1.1.0",
+    "read-pkg-up": "^1.0.1",
+    "registry-auth-token": "^4.2.1",
+    "redent": "^1.0.0",
+    "registry-url": "^5.1.0",
+    "readdirp": "^3.5.0",
+    "request": "^2.88.2",
+    "resolve": "^1.20.0",
+    "repeating": "^2.0.1",
+    "require-main-filename": "^2.0.0",
+    "require-directory": "^2.1.1",
+    "responselike": "^1.0.2",
+    "rimraf": "^3.0.2",
+    "safer-buffer": "^2.1.2",
+    "scss-tokenizer": "^0.2.3",
+    "semver-diff": "^3.1.1",
+    "safe-buffer": "^5.1.2",
+    "semver": "^7.3.5",
+    "set-blocking": "^2.0.0",
+    "shebang-command": "^2.0.0",
+    "source-map": "^0.4.4",
+    "shebang-regex": "^3.0.0",
+    "sass-graph": "^2.2.5",
+    "signal-exit": "^3.0.3",
+    "spdx-correct": "^3.1.1",
+    "stdout-stream": "^1.4.1",
+    "spdx-expression-parse": "^3.0.1",
+    "spdx-exceptions": "^2.3.0",
+    "sshpk": "^1.16.1",
+    "strip-ansi": "^3.0.1",
+    "string_decoder": "^1.1.1",
+    "spdx-license-ids": "^3.0.9",
+    "string-width": "^1.0.2",
+    "strip-indent": "^1.0.1",
+    "strip-bom": "^2.0.0",
+    "supports-color": "^2.0.0",
+    "strip-json-comments": "^2.0.1",
+    "to-readable-stream": "^1.0.0",
+    "term-size": "^2.2.1",
+    "to-regex-range": "^5.0.1",
+    "tar": "^6.1.0",
+    "touch": "^3.1.0",
+    "true-case-path": "^1.0.3",
+    "trim-newlines": "^1.0.0",
+    "tunnel-agent": "^0.6.0",
+    "tough-cookie": "^2.5.0",
+    "tweetnacl": "^0.14.5",
+    "typedarray-to-buffer": "^3.1.5",
+    "undefsafe": "^2.0.3",
+    "unique-string": "^2.0.0",
+    "update-notifier": "^4.1.3",
+    "uri-js": "^4.4.1",
+    "type-fest": "^0.8.1",
+    "url-parse-lax": "^3.0.0",
+    "verror": "^1.10.0",
+    "util-deprecate": "^1.0.2",
+    "validate-npm-package-license": "^3.0.4",
+    "which-module": "^2.0.0",
+    "wide-align": "^1.1.3",
+    "which": "^2.0.2",
+    "wrap-ansi": "^5.1.0",
+    "uuid": "^3.4.0",
+    "widest-line": "^3.1.0",
+    "y18n": "^4.0.3",
+    "wrappy": "^1.0.2",
+    "xdg-basedir": "^4.0.0",
+    "write-file-atomic": "^3.0.3",
+    "yargs": "^13.3.2",
+    "yallist": "^4.0.0",
+    "yargs-parser": "^13.1.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/orosanto/mi_repositorio.git"
+  },
+  "bugs": {
+    "url": "https://github.com/orosanto/mi_repositorio/issues"
+  },
+  "homepage": "https://github.com/orosanto/mi_repositorio#readme"
 }
